# Binary2Lambda

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTES.md  README.md
.github/workflows/: ci.yml
cpp/: lambda_bijection.cpp
docs/: API.md
exploration/: bijective_lambda.py  bounded_o1.py  extension_scaling.py  jump_table_demo.py
plots/: bench_results.csv
python/: check_cross_tables.py  compress_research.py  compression_benchmark.py  compression_large.py  gen_wl_constants.py  lambda_bijection.py  lambda_compress.py  plot_performance.py  profile_scaling.py
rust/: Cargo.toml  lambda_bijection.rs
verify/: README.md  fuzz_harness.py  run_fuzz.sh
wolfram/: LambdaBinarization.wl
